<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lina"
    android:orientation="vertical">
    <include layout="@layout/toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
    <android.support.v7.widget.SwitchCompat
        android:layout_marginBottom="12dp"
        android:id="@+id/sw_Savedriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/deviceTem"
        android:textSize="16sp"
        app:track="@drawable/switchtrack"
        android:thumb="@drawable/switch_thumb"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:showText="true"
        />
    <android.support.v7.widget.SwitchCompat
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/overspeed"
        android:textSize="16sp"
        app:track="@drawable/switchtrack"
        android:thumb="@drawable/switch_thumb"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:showText="true"
        />
    <android.support.v7.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/batterylow"
        android:textSize="16sp"
        app:track="@drawable/switchtrack"
        android:thumb="@drawable/switch_thumb"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:showText="true"
        />
    </LinearLayout>
</LinearLayout>
