<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/grey"
    >
    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="10dp"
            android:id="@+id/imgback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_left_arrow"
            android:scaleType="fitStart"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:src="@drawable/forgotimg"
        android:scaleType="fitCenter"
        />
    </FrameLayout>
    <TextView
        android:padding="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:padding="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotpasswordtxt"
        android:textSize="14sp"
        />
    <EditText
        android:layout_gravity="center"
        android:layout_margin="15dp"
        style="@style/simplerectangle"
        android:hint="@string/registeredemailid"
        android:drawableLeft="@drawable/mail"
        android:id="@+id/forgot_edtEmail"
        android:gravity="center_vertical"
        android:textSize="@dimen/small_size"
        android:drawablePadding="10dp"
        android:background="@color/white"/>
        <TextView
            android:padding="15dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetpassword"
            android:textSize="14sp"
            android:id="@+id/forgot_txtResetPass"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            />
    </LinearLayout>
    </ScrollView>